<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/my_purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GreetingFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="137dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ghost" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/hi_there_i_m_casper"
        android:textStyle="bold"
        android:textSize="25sp"
        android:typeface="sans"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="229dp"
        android:layout_height="57dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/your_english_study_companion"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:typeface="sans" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hi_button"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/my_purple"
        android:layout_marginBottom="100dp"
        android:background="@drawable/my_button"
        android:backgroundTint="@color/white"
        android:text="@string/hi_casper" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/have_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:text="@string/i_already_have_an_account" />



</RelativeLayout>